# ERA-Path-Planning

./: README.md
src/roborts_common/roborts_common/: CMakeLists.txt  package.xml
src/roborts_common/roborts_control/: CMakeLists.txt  package.xml
src/roborts_common/roborts_control/config/: robot_control.yaml
src/roborts_common/roborts_control/launch/: roborts_control.launch
src/roborts_common/roborts_description/: CMakeLists.txt  package.xml
src/roborts_common/roborts_description/meshes/bases/: bot.dae  bot.stl
src/roborts_common/roborts_description/meshes/wheels/: omni_wheel_1.dae  omni_wheel_2.dae
src/roborts_common/roborts_description/robots/: roborts_std.urdf.xacro
src/roborts_common/roborts_description/urdf/bases/: roborts_base.gazebo.xacro  roborts_base.urdf.xacro
src/roborts_common/roborts_description/urdf/wheels/: omni_wheel.urdf.xacro
src/roborts_common/roborts_localization/: CMakeLists.txt  package.xml
src/roborts_common/roborts_localization/launch/: amcl.launch  localization_complete.launch  map_saver.launch  map_server.launch  robot_localization_complete.launch  robot_localization_odom.launch  robot_localization_world.launch  slam_gmapping.launch
src/roborts_common/roborts_localization/maps/: ai2020.pgm  ai2020.yaml
src/roborts_common/roborts_navigation/: CMakeLists.txt  package.xml
src/roborts_common/roborts_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  teb_local_planner_omni_params.yaml
src/roborts_common/roborts_navigation/launch/: move.launch  move_base.launch  move_base_eband.launch  move_base_teb.launch  navigation_complete.launch  rgbd_to_laserscan.launch  rviz_satellite.launch  scan_filter.launch
src/roborts_common/roborts_pad/: CMakeLists.txt  package.xml
src/roborts_common/roborts_pad/config/: logitechf710.yaml  ps3.yaml
src/roborts_common/roborts_pad/launch/: roborts_pad.launch
src/roborts_common/roborts_pad/src/: roborts_pad.cpp
src/roborts_common/roborts_perception/: CMakeLists.txt  package.xml
src/roborts_common/roborts_robot_local_control/: CMakeLists.txt  package.xml
src/roborts_common/roborts_robot_local_control/launch/: frames_mapping.launch  robot_local_control.launch
src/roborts_sim/roborts_gazebo/: CMakeLists.txt  mainpage.dox  package.xml
src/roborts_sim/roborts_gazebo/launch/: gazebo_rviz.launch  roborts_gazebo.launch  roborts_one_robot.launch
src/roborts_sim/roborts_gazebo/rviz/: roborts_b.rviz
src/roborts_sim/roborts_gazebo/worlds/: ai2020.world
src/roborts_sim/roborts_sim/: CMakeLists.txt  package.xml
src/roborts_sim/roborts_sim_bringup/: CMakeLists.txt  package.xml
src/roborts_sim/roborts_sim_bringup/launch/: roborts_complete.launch
