<package>
  <name>roborts_common</name>
  <version>1.1.3</version>
  <description>URDF description </description>


  <license>BSD</license>

  <url type="website">http://ros.org/wiki/roborts_common</url>
  <url type="repository">https://github.com/RobotnikAutomation/roborts_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/roborts_common/issues</url>
  <maintainer email="era@iitk.ac.in">ERA-IITK</maintainer>

  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roborts_description</run_depend>
  <run_depend>roborts_localization</run_depend>
  <run_depend>roborts_navigation</run_depend>
  <run_depend>roborts_pad</run_depend>
  <run_depend>roborts_control</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
