<?xml version="1.0"?>
<package>
  <name>roborts_description</name>
  <version>1.1.3</version>
  <description> URDF description</description>

  <url type="website">http://ros.org/wiki/roborts_description</url>
  <url type="repository">https://github.com/RobotnikAutomation/roborts_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/roborts_common/issues</url>
  <maintainer email="era@iitk.ac.in">ERA-IITK</maintainer>

 
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robotnik_sensors</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robotnik_sensors</run_depend>
  
</package>



