<?xml version="1.0"?>
<package>
  <name>roborts_navigation</name>
  <version>1.1.3</version>
  <description> Navigation launch and config files </description>
    <maintainer email="era@iitk.ac.in">ERA-IITK</maintainer>

  <url type="website">http://ros.org/wiki/roborts_navigation</url>
  <url type="repository">https://github.com/RobotnikAutomation/roborts_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/roborts_common/issues</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>teb_local_planner</run_depend>
  <run_depend>eband_local_planner</run_depend>
  <run_depend>costmap_prohibition_layer</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>global_planner</run_depend>

</package>
