<?xml version="1.0"?>
<package>
  <name>roborts_pad</name>

  <version>1.1.3</version>
  <description>The roborts_pad package allows to control the teleoperation  </description>
  <maintainer email="era@iitk.ac.in">ERA-IITK</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/roborts_pad</url>
  <url type="repository">https://github.com/RobotnikAutomation/roborts_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/roborts_common/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robotnik_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>robotnik_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>joy</run_depend>

</package>
