<package>
  <name>roborts_sim_bringup</name>
  <version>1.1.3</version>
  <description>
		Launch files for simulation.
	</description>
  <maintainer email="era@iitk.ac.in">ERA-IITK</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/roborts_sim_bringup</url>
  <url type="repository">https://github.com/RobotnikAutomation/roborts_sim.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/roborts_sim/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
  <author email="rnavarro@robotnik.es">Román Navarro</author>
  <author email="jarino@robotnik.es">Jorge Ariño</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roborts_control</run_depend>  
  <run_depend>roborts_description</run_depend>
  <run_depend>roborts_pad</run_depend>  

</package>
